--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
