client register and login implemented

--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Data Source=.;Initial Catalog=TravelingDB;Integrated Security=True;TrustServerCertificate=True"
+    "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
   }
 }
