--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Connection": "Data Source=.;Initial Catalog=TravelingDB;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "PayPal": {
+    "ClientId": "AQBnvANzfkkYJocmvYDc-RF-UrWyKQUDiIo_FtX9oQGfLKXQuRfY6gSEZlQUbzEh1_ZYTC5SJU0j6Zwz",
+    "ClientSecret": "EPFxgAKQZwUV8NcdOvNkG5l9VS2tNj_TDEH2UeUaDsbFwvrQRataXWCYEu9zL6ErOGtDtHbcR2jloere"
   }
 }
