change password and forget passowrd implemented

--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -6,9 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "JWT": {
+    "ValidIssuer": "https://localhost:7062/",
+    "ValidAudience": "https://localhost:4200",
+    "Secret": "zxcvbnmASDFGHJKL123456789qwertyuiop"
+  },
   "ConnectionStrings": {
 
-    "Connection": "Data Source=.;Initial Catalog=TravelingDB;Integrated Security=True;TrustServerCertificate=True"
+    "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
   },
   "PayPal": {
     "ClientId": "AQBnvANzfkkYJocmvYDc-RF-UrWyKQUDiIo_FtX9oQGfLKXQuRfY6gSEZlQUbzEh1_ZYTC5SJU0j6Zwz",
