--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -11,6 +11,15 @@
     "ValidAudience": "https://localhost:4200",
     "Secret": "zxcvbnmASDFGHJKL123456789qwertyuiop"
   },
+
+  "Smtp": {
+    "Server": "smtp.office365.com",
+    "Port": 587,
+    "Username": "Mohamed_Helmy70@outlook.com",
+    "Password": "Mh12345#",
+    "EnableSsl": true
+  },
+
   "ConnectionStrings": {
 
     "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
