booking backage solved

--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -20,6 +20,22 @@
     "EnableSsl": true
   },
 
+  "Authentication": {
+    "Google": {
+      "ClientId": "17865651834-fjis911rd895ha5tcht3mndrq513tj59.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "YOUR_FACEBOOK_APP_ID",
+      "AppSecret": "YOUR_FACEBOOK_APP_SECRET"
+    },
+    "Twitter": {
+      "ConsumerKey": "YOUR_TWITTER_CONSUMER_KEY",
+      "ConsumerSecret": "YOUR_TWITTER_CONSUMER_SECRET"
+    }
+  },
+
+
   "ConnectionStrings": {
 
     "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
