--- a/Travel Website System(API)/Travel Website System(API)/Travel Website System(API).csproj
+++ b/Travel Website System(API)/Travel Website System(API)/Travel Website System(API).csproj
@@ -32,4 +32,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\packages\" />
+  </ItemGroup>
+
 </Project>
