add Some updated

--- a/Travel Website System(API)/Travel Website System(API)/Travel Website System(API).csproj
+++ b/Travel Website System(API)/Travel Website System(API)/Travel Website System(API).csproj
@@ -33,7 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\packages\" />
+    <Folder Include="wwwroot\Images\Services\" />
+    <Folder Include="wwwroot\Images\Packages\" />
   </ItemGroup>
 
 </Project>
