--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -38,7 +38,9 @@
 
   "ConnectionStrings": {
     //YOUSEF\\SQLEXPRESS
-    "Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True"
+    //"Connection": "Data Source=.;Initial Catalog=Traveling;Integrated Security=True;TrustServerCertificate=True",
+    "Connection": "Data Source=TravelingDB.mssql.somee.com;Initial Catalog=TravelingDB;user id=MohamedYousef_SQLLogin_1;pwd=vpa3csub52;TrustServerCertificate=True",
+  
   },
   "PayPal": {
     "ClientId": "AQBnvANzfkkYJocmvYDc-RF-UrWyKQUDiIo_FtX9oQGfLKXQuRfY6gSEZlQUbzEh1_ZYTC5SJU0j6Zwz",
