--- a/Travel Website System(API)/Travel Website System(API)/appsettings.json
+++ b/Travel Website System(API)/Travel Website System(API)/appsettings.json
@@ -15,7 +15,7 @@
   "Smtp": {
     "Server": "smtp.office365.com",
     "Port": 587,
-    "Username": "Mohamed_Helmy70@outlook.com",
+    "Username": "helmy12310@outlook.com",
     "Password": "Mh12345#",
     "EnableSsl": true
   },
